[metadata]
description = Cython wrapper for MeCab
url = https://github.com/polm/fugashi
author = "Paul O'Leary McCann"
author_email = polm@dampfkraft.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Natural Language :: Japanese
    Topic :: Text Processing :: Linguistic

[tool.pytest]
testpaths = "fugashi/tests"
